# WebPhantom

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md  release.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
docs/: architecture.md  release.md  safety.md  usage.md
examples/: README.md  scan-profile.json
src/webphantom/: __init__.py  config.py  models.py  safety.py
src/webphantom/browser/: __init__.py  runner.py
src/webphantom/cli/: app.py  branding.py
src/webphantom/collectors/: __init__.py  dom.py  headers.py  network.py  security.py  state.py  technology.py
src/webphantom/examples/: __init__.py  demo_server.py
src/webphantom/reports/: html.py  markdown.py
src/webphantom/storage/: __init__.py  har.py  project.py
tests/: __init__.py  test_branding.py  test_cli.py  test_config.py  test_har.py  test_headers.py  test_html_report.py  test_reports.py  test_safety.py  test_security.py  test_storage.py
